Resolved issues: #1013 - ALM Integration - CR - Need date and time for all mapped test sets in "View Mapped Files" screen
#860 - Regression_Issue Scraping : If object is scrapped once, then on scrapping for the second time its allowing to save the same object with the same name

#9 - UI_iOSNative: In MAC system, the "Encrypt" and "Reset" buttons are not visible upon selecting encryption methods for the first time

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1035,6 +1035,12 @@ input[disabled]{
     max-height: 60px;
     color: #000;
 }
+.custList li{
+    white-space: nowrap;
+    width: 17em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 .compareObj
 {
     float: left;
@@ -2522,6 +2528,8 @@ input[disabled]{
 .scheduleSuite .ipformating{
 	height: 27px;
     margin-top: 2px;
+    width: 196px;
+    padding: 0px;
 }
 .scheduleSuite .datePicContainer{
 	position: relative;
